fix: resolve security hotspot and increase code coverage to 100%